--- a/quiz_circus/app/views/circuses/_form.html.erb
+++ b/quiz_circus/app/views/circuses/_form.html.erb
@@ -1,1 +1,7 @@
-
+<%= form_for(@circus) do |f| %>
+  <%= f.label :name %>
+  <%= f.text_field :name %>
+  <%= f.label :image_url, "Image URL" %>
+  <%= f.text_field :image_url %>
+  <%= f.submit %>
+<% end %>
