--- a/quiz_circus/app/views/entertainers/_form.html.erb
+++ b/quiz_circus/app/views/entertainers/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for @entertainer do |f| %>
+  <%= f.hidden_field :circus_id, @circus.id %>
   <p>
     <%= f.label :name %>
     <%= f.text_field :name %>
