--- a/quiz_circus/app/views/layouts/application.html.erb
+++ b/quiz_circus/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <header>
+    <h2><%= link_to "Home", root_path %></h2>
+  </header>
 <%= yield %>
 
 </body>
